@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- DateTime now calls DateTime->_core_time() instead of calling Perl's time()
+  built-in directly. This makes it much easier to override the value of time()
+  that DateTime sees. This may make it easier to write tests for code that
+  uses DateTime .
+
+
 1.07   2014-02-06
 
 - Added a hack to get this module working on Android. RT #92671.
